argocd/Applications/CiliumNetworkPolicies/FluentbitiNP.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fluent-bit-cnp
  namespace: fluentbit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit


  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoriametrics
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "2020"
              protocol: TCP


  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

          rules:
            dns:
              - matchPattern: "*"


    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP


    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
