argocd/Applications/CiliumNetworkPolicies/IstioNP.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: istio-system-dns
  namespace: istio-system
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: istiod-ingress
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      app: istiod
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: ztunnel
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: istio-ingress
      toPorts:
        - ports:
            - port: "15012"
              protocol: TCP

---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ztunnel-egress
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      app: ztunnel
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: istiod
      toPorts:
        - ports:
            - port: "15012"
              protocol: TCP

---


apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: istio-ingress-policy
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      app: istio-ingress

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-public
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: istiod
      toPorts:
        - ports:
            - port: "15012"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: grafanadashboard
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP

    - toEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - backend-ns
            - key: app
              operator: In
              values:
                - book-services
                - book-transaction-service
                - feedback-service

    - toEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - frontend-ns
            - key: app
              operator: In
              values:
                - frontend
      toPorts:
        - ports:
            - port: "15008"
              protocol: TCP
