argocd/Applications/CiliumNetworkPolicies/JaegerNP.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger-pods-cnp
  namespace: jaeger
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: jaeger

  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: jaeger

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"


---


apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger-agent-cnp
  namespace: jaeger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: agent
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: victoriametrics
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "14271"
              protocol: TCP
---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger-collector-cnp
  namespace: jaeger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: collector
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: victoriametrics
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "14269"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opentelemetry-collector
            k8s:io.kubernetes.pod.namespace: opentelemetry
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger-ingester-cnp
  namespace: jaeger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: ingester
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: victoriametrics
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "14270"
              protocol: TCP

---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger-query-cnp
  namespace: jaeger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/component: query
      app.kubernetes.io/instance: jaeger
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: victoriametrics
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "16687"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            k8s:io.kubernetes.pod.namespace: ingress-nginx

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmselect
            app.kubernetes.io/instance: vmks-victoria-metrics-k8s-stack
      toPorts:
        - ports:
            - port: "8481"
              protocol: TCP
---
