argocd/Applications/CiliumNetworkPolicies/VictoriaMetricsNP.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoriametrics-cnp
  namespace: victoriametrics
spec:
  # Tous les pods du namespace victoriametrics
  endpointSelector: {}
  # INGRESS
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoriametrics

    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: opentelemetry
            app.kubernetes.io/name: opentelemetry-collector
      toPorts:
        - ports:
            - port: "8480"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "8481"
              protocol: TCP
            - port: "9093"
              protocol: TCP
  # EGRESS
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoriametrics

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: fluentbit
            app.kubernetes.io/name: fluent-bit
      toPorts:
        - ports:
            - port: "2020"
              protocol: TCP

---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent-allow-nodes
  namespace: victoriametrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  egress:
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "9100"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-operator-allow-konnectivity
  namespace: victoriametrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-metrics-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            app: konnectivity-agent
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
